--- a/Privates.html
+++ b/Privates.html
@@ -118,63 +118,11 @@
 
         <header class="section-header wow fadeInUp">
           <h3> سياسة الخصوصية</h3>
-          <p>خصوصية موقع مكتب ام سي ام للاستشارات الإدارية MCM Consultancy المكتب الإلكتروني (mcm.sa / eofficem.com )</p>
-          <h5>المقدمة</h5>
-          <p style="text-align: start;">
-            1- تعنى (إتفاقية سرية المعلومات) لدينا بطريقة جمعنا للبيانات و طريقة حماية المعلومات الشخصية للمستخدمين، وهي بغاية الأهمية للإطلاع و مراجعة تفاصيل هذه الإتفاقية.<br>
-            2- نحن لا يعنينا أي معلومات شخصية لشخص محدد بعينه ، و إنما يتم جمع المعلومات الشخصية من الراغبين بإستخدام موقع المكتب الإلكتروني او صفحات الانترنت المرتبطة بما في ذلك حين تتصل هاتفيا او بواسطة البريد الالكتروني بفريق مركز دعم المستخدمين لدينا). و بمجرد تزويدك لنا بمعلوماتك الشخصية تكون قد فوضتنا بمعالجة هذه المعلومات وفق بنود وشروط (إتفاقية سرية المعلومات<br>
-            3- قد نلجأ الى تعديل في (إتفاقية سرية المعلومات) في اي وقت, وذلك بعد الإعلان عن هذا التعديل بنشر النسخة المعدلة على الموقع. وتكون النسخة المعدلة من (إتفاقية سرية المعلومات) سارية المفعول اعتبارا من تاريخ نشرها. في اعقاب النشر يعتبر استمرارك في استخدام الموقع إلتزاما منك بالشروط والبنود الواردة في النسخة المعدلة لطريقة معالجتنا وتعاملنا مع معلوماتك الشخصية التي كنت قد زودتنا بها. ونأمل منكم الإطلاع من حين لأخر على إعلانات إدارة الموقع و التي قد يكون لها علاقة بهذا الإتفاقية (إتفاقية سرية المعلومات).<br>
-            4- نأمل منكم الإطلاع من حين لأخر على إعلانات إدارة (ام سي ام للاستشارات الإدارية ) و التي قد يكون لها علاقة بهذا الإتفاقية (إتفاقية سرية المعلومات).<br>
-            5- يغطي (إتفاقية سرية المعلومات) الأنشطة التالية والتي يرد تفصل لها في البنود إدناه :<br><br>
-            1-جمعنا وإحتفاظنا بمعلوماتك الشخصية التي تعاملت بها أو زودتنا بها أو قمت بعرضها أو تعديلها.<br>
-            2- جمعنا وإحتفاظنا بمعلوماتك الشخصية التي تعاملت بها أو زودتنا بها أو قمت بعرضها أو تعديلها.<br>
-            3- إستخدامنا لمعلوماتك الشخصية ومراجعتها وتعديلها حسب الحاجة.<br>
-            4- استخدامك لمعلوماتك الشخصية ومعلومات المستخدمين الاخرين.<br>
-            5- إستخدام، دخول، تصفح، وتعديل معلوماتك الشخصية.<br>
-            6- ادوات الاتصال مع اطراف ثالثة عبر الانترنت.<br>
-            7- برمجيات التصفح المستخدمة على جهازك الشخصي.<br>
-            8- لا لرسائل الكترونية مضللة او مخادعة.<br>
-            9- حماية معلوماتك الشخصية.<br>
-            <br>
-            6- كيف لك الاتصال بنا للاستفسار عن (إتفاقية سرية المعلومات).<br><br>
-            جمعنا وإحتفاظنا بمعلوماتك الشخصية التي تعاملت بها أو زودتنا بها أو قمت بعرضها أو تعديلها<br>
-            كجزء من التسجيل على الموقع سوف يطلب منك تزويدنا بمعلومات شخصية محددة,مثل اسمك, بريدك الالكتروني و/أو رقم هاتفك ومعلومات مشابهة اخرى, وبعض المعلومات الاضافية عنك مثل تاريخ ميلادك أو اي معلومات محددة لهويتك إضافة إلى ذلك وبهدف توثيقنا لهويتك قد نحتاج منك ان تقدم لنا اثبات ساري المفعول يثبت هويتك (مثلا نسخة عن جواز سفرك, تاشيرة او تصريح الاقامة, الهوية الوطنية و/ أو رخصة القيادة).<br>
-            قد نحتاج ايضا جمع معلومات مالية محددة منك, مثلا بطاقتك الائتمانيةو/أو تفاصيل حسابك المصرفي حتى يتم إضافتها إلى معلومات حسابك في الموقع، و ستسخدم هذه المعلومات المالية لاهداف الفوترة ولإتمام عملياتك في الموقع.<br>
-            بعد تسجيلك في الموقع, ينبغي عليك عدم نشر اي معلومات شخصية (بما في ذلك اي معلومات مالية) على اي جزء من الموقع, باستثناء جزء” إدارة الحساب” وهذا من شأنه حمايتك من امكانية تعرضك للاحتيال او سرقة معلومات هويتك. كما ان نشرك لأي من معلوماتك الشخصية على اي جزء من الموقع باستثناء”حسابي” قد يعتبر مخالفة لهذه الإتفاقية قد يتسبب بأخذ إجراء بحق عضويتك بالموقع.<br>
-            سوف يتم تسجيل معلومات عملياتك و أنشطتك في الموقع سواء كانت عملية شراء خدمة أو سحب مبالغ أو إيداع مبالغ أو غيرها من الأنشطة الخاصة بعملياتك في الموقع.<br>
-            الرجاء ملاحظة اننا قد نستخدم عنوان برتوكول الانترنت خاصتك او (الاى بي) (وهو عبارة عن رقم مميز يعطى لمقدم خدمة الانترنت لك بهدف تحليل انماط نشاطاتك التي تمارسها على الموقع, وبالتالي تحسين ادارتك على الموقع. وقد نجمع ايضا معلوماتك عن تفاصيل عمليات التصفح.<br>
-            قد نجمع معلومات اضافية منك او عنك بطرق اخرى لم يتم ذكر تفاصيلها, مثل تسجيل المكالمات الهاتفية مع موظفي مركز العناية بالمستخدمين او من خلال اجاباتك على استبياناتنا .وقد نجمع معلومات لاهداف احصائية حينها تبقى اسماء اصحاب المعلومات مجهولة.<br>
-            <br>
-            7- استخدامنا لمعلوماتك الشخصية <br><br>
-            نستخدم معلوماتك الشخصية فقط لتقديم خدمات ودعم من فريق الزبائن, ويهدف قياس مستوى خدماتنا وتحسينها لك, ومنع النشاطات غير القانونية, وتنفيذ بنود اتفاقيتنا معك، اضافة الى تذليل العوائق, وجمع الرسوم, وتزويدك برسائل الكترونية ترويجية, وكذلك من اجل توثيق المعلومات التي زودتنا بها مع اطراف ثالثة , مثلا قد نلجأ الى الاشتراك في بعض من معلوماتك الشخصية مع البنوك او التفويض لبطاقات الائتمان لمعالجةوتوثيق خدمات مع اطراف ثالثة لاهداف تتعلق بزيادة مستوى الأمن.<br>
-            برغم حرصنا للمحافظة على سرّيتك ,الا اننا قد نحتاج الى الافصاح عن معلوماتك الشخصية لاجهزة تنفيذ القانون, الهيئات الحكومية او اطراف ثالثة نكون ملزمين بفعل ذلك باوامر من المحكمة اوغيرها من الدوائر القانونية, لنكون ملتزمين ببنود القانون, عند اعتقادنا ان الافصاح عن معلوماتك الشخصية ربما يقي من أذى جسدي او خسارة مالية, او للاخبار عن نشاط مشبوه او للتحقيق في امكانية انتهاك لبنود وشروط اتفاقية المستخدم.<br>
-            في حال تم بيع موقع المكتب الإلكتروني , او اي من مؤسساته الفرعية او اصوله التجارية قد نفصح عن معلوماتك الشخصية للمشتري المحتمل, وذلك بهدف استمرار نشاط الموقع.<br>
-            نحن لا نبيع ولا نؤجر لطرف ثالث اي من معلوماتك الشخصية ضمن نطاق عملنا التجاري العادي, وسوف نشرك اخرين في معلوماتك الشخصية فقط وفق ما جاء في (إتفاقية سرية المعلومات) هذه .<br>
-            بمجرد تسجيلك في الموقع تعتبر أنك أعطيتنا تفويضا واضحا لتسليمك رسائل إلكترونية ترويجية حول خدماتنا, إضافة الى رسائل إلكترونية بخصوص التغيرات,والملامح الجديدة على الموقع , فلو انك في اي وقت قررت بعدم رغبتك في تلقي مثل هذه الرسائل,ماعليك سوى إختيار الرابط الخاص بإيقاف إرسال هذه الرسائل إلى عنوانك البريدي والمتوفر في اسفل اي من هذه الرسائل الاكترونية او الذهاب الى جزء “حسابي” على الموقع.<br>
-            استخدامك لمعلوماتك الشخصية ومعلومات المستخدمين الآخرين قد يكون الاعضاء في حاجة للمشاركة في المعلومات الشخصية (بما في ذلك المعلومات المالية) مع بعضهم البعض,بهدف استكمال عمليات على الموقع. عليك ان تحترم في جميع الاوقات سرية الاعضاء الاخرين في الموقع.<br>
-            نحن لا نضمن سرية معلوماتك حين تشارك بها اعضاء اخرين,لذا عليك طلب معلومات حول مستوى السرية وعقود الأمان من اي اعضاء اخرين على الموقع قبل مباشرتك و تزويدهم بأي بيانات أو معلومات مالية أو شخصية، وبإمكانك الرجوع لموظفي مركز خدمة العملاء للتأكد من صلاحية المطلوب و أمانه.<br>
-            عقد السرية هذا لا يغطي كشفك لمعلوماتك الشخصية لعضو في موقع اخر. انت موافق على استخدام اي معلومات شخصية تتلقاها من عضو في موقع اخر بغرض اتمام عملية على موقعنا, فقط لهذه العملية,وانك لن تستخدم المعلومات المتلقاة من عضو في موقع اخر لاي اهداف اخرى(باستثناء تفويض واضح من العضو في الموقع الاخر)<br>
-            انت تعلم وموافق انك سوف لن تستخدم المعلومات الشخصية التي وردتك من الموقع عن أي عضو في موقع اخر وفق القوانين المعمول بها في هذه الوثيقة.<br>
-            انت على علم و موافق بأنه عليك إستخدام المعلومات الشخصية التي وردتك من المستخدمين ضمن هذا الإتفاقية.<br><br>
-            8- إستخدام، دخول، تصفح، وتعديل معلوماتك الشخصية<br><br>
-            باستطاعتك الوصول ومراجعة معلوماتك الشخصية من خلال صفحة إدارة “حسابي”على الموقع, فاذا ما تغيرت معلوماتك الشخصية باي طريقة,او انك اعطيت معلومات غير صحيحة على الموقع,عليك تحديثها او تصحيحها حالا,اما من خلال عرضها على “حسابي” او من خلال الاتصال بفريق خدمة العملاء.<br>
-            يرجى العلم أننا سوف نحتفظ بمعلوماتك الشخصية خلال وبعد انتهائك من استخدام الموقع بحسب ما هو مطلوب قانونا,وذلك بهدف التغلب على العوائق التقنية ,ولمنع الاحتيال,وللمساعدة في اي تحقيق قانوني ولاتخاذ اي اجراءات اخرى ينص عليها القانون.<br><br>
-            9- الروابط مع مواقع الكترونية لاطراف ثالثة<br><br>
-            قد يحتوي الموقع على روابط مع مواقع الكترونية اخرى, الرجاء العلم اننا غير مسؤولين عن مستوى الأمان أو الطرق المتبعة في المواقع الاخرى.<br>
-            نحن نشجعك حين تنتقل من موقعنا الى أي موقع أخر بان تبادر بقراءة بيانات (إتفاقية سرية المعلومات) الخاصة بهم إذا كان في نيتك اعطائهم معلوماتك الشخصية.<br>
-            ان (إتفاقية سرية المعلومات) عندنا يطبق فقط على معلوماتك الشخصية التي جمعناها على موقعنا<br>
-            برمجيات التصفح المستخدمة على جهازك الشخصي<br>
-            مثل العديد من مواقع الانترنت فان موقعنا يستخدم ملفات برمجية صغيرة يتم تثبيتها على الجزء الصلب من حاسوبك, فحين تذهب لزيارة صفحات انترنت معينة على المواقع, تتعرف السجل على المتصفح من خلال رقم فريد و عشوائي.<br>
-            كما ان السجلات” الكوكيز” التي نستخدمها لا تكشف اي من معلوماتك الشخصية.هذه السجلات تساعدنا في تحسين ادائك على الموقع وتعيننا على تفهم اي اجزاء من الموقع هي الاكثر استخداما,انت لك مطلق الحرية في الغاء هذه السجلات اذا أتيح لك ذلك من المتصفح,مع ان ذلك قد يفضي الى وقفك من استخدام الموقع<br><br>
-            10- لا للرسائل الالكترونية التدميرية أو المخادعة<br><br>
-            نحن لا نتسامح مع الرسائل التدميرية,من اجل اخبار الموقع عن اي رسائل الكترونية تدميرية او مخادعة, الرجاء ارسال رسالة الكترونية الى ايميل ( info@mcm.sa) ,فان الاتصال لارسال رسائل الكترونية تلحق الضرر بنا او اي محتويات سيؤدي الى نقض بنود اتفاقية المستخدم. فنحن نفحص الرسائل اوتوماتيكيا, وقد نلجأ الى الفلترة اليدوية لها لمعرفة ما اذا هناك رسائل تدميرية او فيروسات او هجمات ضارة واي نشاطات ماكرة اخرى او غير قانونية.<br><br>
-            11- حماية معلوماتك الشخصية<br><br>
-            نحن نحتفظ بمعلوماتك (إتفاقية سرية المعلومات) في ملفات الكترونية, فانت حين تزودنا بمعلوماتك الشخصية,تكون قد منحتنا المسؤولية للاحتفاظ بهذه المعلومات , ونحن نتخذ كل الاحتياطات للمحافظة على معلوماتك (إتفاقية سرية المعلومات) , وذلك بعدم الوصول اليها من اطراف غير مسؤولة ,او استخدامها او الكشف عنها<br>
-            على اي حال فان الانترنت وسيلة غير امنة ونحن لا نضمن سرية معلوماتك الشخصية,وعليك ان تدخل اسم المستخدم وكلمة الدخول في كل مرة ترغب فيها بالدخول الى حسابك او اتمام صفقات على الموقع,اختر كلمة الدخول بدقه بالستخدام ارقام مميزة وحروف بمواصفات خاصة. لا تف¬صح عن اسم المستخدم وكلمة الدخول لاي احد,فاذا ما اعتقدت ان اسم المستخدم او كلمة الدخول قد تم كشفها, بادر بالاتصال فورا بفريق الدعم في الموقع لتغييرها<br><br>
-            12- كيف تتصل بنا للاستفسار بخصوص (إتفاقية سرية المعلومات)<br><br>
-            اذا كان لديك اسئلة او اهتمامات حول جمعنا واستخدامنا لمعلوماتك الشخصية ,الرجاء مراسلتنا على العنوان البريدي الخاص بمركز خدمة العملاء (info@mcm.sa) أو مراسلتنا على الواتساب في الرقم ( 966535815310+)
-
+          <p> نلتزم يتقديم  أعلي مستويات الجودة في خدماتنا والمحافظة علي مسعتها كشركة موثوقة .
+            نستمع بعناية لملاحات العملاء ونعمل علي تحسين خدماتنا استنادا الي تلك الملاحظات ونلتزم بالامتثال  لاعلي المعايير المهنية والاخلاقية  في كل الجوانب .
+            ونتبع التشريعات واللوائح المحلية والدولية  ذات الصلة والعمل علي تطوير مهارات موظفينا من خلال التدريب  والتعليم المستمر ونستثمر في تقنيات  وادوات حديثة لتقديم خدماتنا  بكفاءة اعلي  ونشجع علي التفكير الابداعي والابتكار في الحلول  التي نقدمها لعملائنا . ونسعي في تطبيق  احدث التكنولوجيا التي تعزز التطوير  من النتائج  ونبني علاقات قائمة علي الثقة مع عملائنا وشركائنا ونتعاون معهم بشكل فعال.
           </p>
+        
 
  </div>
     </section><!-- End Services Section -->
