--- a/Services1.html
+++ b/Services1.html
@@ -108,10 +108,10 @@
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h2>التخطيط الاستراتيجي والتميز المؤسسي</h2>
+        <h2>وضع مؤشرات تقييم الأداء</h2>
         <ol>
           <li><a href="index.html">الرئيسية</a></li>
-          <li>التخطيط الاستراتيجي والتميز المؤسسي</li>
+          <li>وضع مؤشرات تقييم الأداء</li>
         </ol>
       </div>
 
@@ -124,15 +124,18 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header wow fadeInUp">
-          <h3>التخطيط الاستراتيجي والتميز المؤسسي</h3>
-          <p style="text-align: start;">
-            1-تصميم أفضل الممارسات والمنهجيات في منظومة التخطيط الأستراتيجي والتميز المؤسسي وصياغة خطط استراتيجية تتوافق مع نماذج التميز المؤسسي .<br>
-            2-تقييم الأداء المؤسسي وفق منهجية الأداء الأوروبي EFQM :تقييم الأداء المؤسسي المتميز وفق معايير الجودة الأوروبية واكتشاف الفجوات وسدها وفقاً للمعايير التسعة في نموذج الجودة الأوروبية.<br>
-            3-بناء الخطط الاستراتيجية وفق منهجية الأداء المتوازن:ترجمة استراتيجية المنظمات إلى خطط يتم العمل بها واستخدام منهجية قياس الأداء المتزن التي لا تركز على جانب معين من جوانب الأداء.<br>
-            4-تأهيل المنظمات لتطبيق معايير التميز المؤسسي للمشاركة في جوائز التميز: توفير خدمات تنفيذ منظومات التميز المؤسسي وتمكين وتأهيل المنظمات للمشاركة في الجوائز من خلال الآليات المثبتة عملياً.<br>
-            5-تقييم وتحكيم الخطة الاستراتيجية: مراجعة وتدقيق محتوى الخطة الاستراتيجية للمنشاَت، وإبداء الملاحظات على المحتوى وذلك بهدف تقييمها وتحكيمها.
-          </p>
+          <h3>وضع مؤشرات تقييم الأداء</h3>
+          <p>
+            وضع مجموعة من المؤشرات والمعايير لتقدير كفاءة العمليات والتحقق من الأهداف المحددة  </p>
         </header>
+        
+        <div class="text-center"><button type="submit" style=" background: #F4D96E;
+          border: 5px;
+          padding: 10px 30px;
+          color: #fff;
+          transition: 0.4s;
+          cursor: pointer;"><a href="order.html" style="color: #fff;">لطلب الخدمة </a></button>
+        </div>
 
       </div>
     </section><!-- End Services Section -->
@@ -180,7 +183,7 @@
         </li>
 
         <li id='field_5_6' class='gfield field_sublabel_below field_description_below gfield_visibility_visible'><label class='gfield_label' for='input_5_6'>اختار الخدمة</label>
-            <div class='ginput_container ginput_container_select'><select name='input_6' id='input_5_6' class='medium gfield_select' aria-invalid="false"><option value='A2'>التخطيط الاستراتيجي والتميز المؤسسي</option><option value='A3'>A3</option><option value='A4'>A4</option><option value='A5'>A5</option><option value='A6'>A6</option><option value='DL'>DL</option><option value='C4'>C4</option><option value='C3'>C3</option><option value='Others'>Others</option></select></div>
+            <div class='ginput_container ginput_container_select'><select name='input_6' id='input_5_6' class='medium gfield_select' aria-invalid="false"><option value='A2'>وضع مؤشرات تقييم الأداء</option><option value='A3'>A3</option><option value='A4'>A4</option><option value='A5'>A5</option><option value='A6'>A6</option><option value='DL'>DL</option><option value='C4'>C4</option><option value='C3'>C3</option><option value='Others'>Others</option></select></div>
         </li>
         -->
           <div class="form-group">
