--- a/Services2.html
+++ b/Services2.html
@@ -109,10 +109,10 @@
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h2>إعادة هيكلة الشركات المتعثرة</h2>
+        <h2>اعدادات السياسات والاجراءات الداخلية</h2>
         <ol>
           <li><a href="index.html">الرئيسية</a></li>
-          <li>إعادة هيكلة الشركات المتعثرة</li>
+          <li>اعدادات السياسات والاجراءات الداخلية</li>
 
         </ol>
       </div>
@@ -127,17 +127,19 @@
 
         <header class="section-header wow fadeInUp">
           <h3>
-إعادة هيكلة الشركات المتعثرة</h3>
-          <p style="text-align: start;">
-           1- عملية تغيير مدروسة للمكونات التنظيمية لاستعادة قدرتها على استيفاء أعمالها وكيانها الاقتصادي المتعثر بنجاح.<br>
-           2- تقييم الوضع الراهن للشركة: الأسلوب المنهجي لدراسة المشاكل الإدارية وتحديد المعلومات الحالية حول نقاط القوة ونقاط الضعف والتقصير التي تعتري عملها في المنظمة ومعرفة موقعها وموضعها في السوق ومميزاتها التنافسية التي تتفوق بها على الآخرين أو الفرص.<br>
-           3- مراجعة وتحديث استراتيجية المنظمات: مراجعة الخطة الاستراتيجية الحالية للمنظمة، إذا وجدت، وتهدف عملية المراجعة إلى مساعدة الإدارة على ترشيد قراراتها وذلك لتحديد جوانب الاستراتيجية التي تتناسب مع التغير في البيئة المحيطة، وتحديثها عند الضرورة.<br>
-           4- تطوير الوائح الداخلية للمنشآة: تطوير مجموعة اللوائح التنفيذية الإلزامية التي تحتوي على معلومات حول تنظيم عمل الموظفين.<br>
-           5- تحديث بطاقات الوصف الوظيفي للمنشآة: يتم تحديث بطاقة التوصيف الوظيفي عندما يطرأ جديد في بيان الواجبات والمهام المطلوب القيام بها من كل منصب وظيفي، والمؤهلات العلمية، والخبرات العملية، والمهارات والقدرات المطلوبة، والصلاحيات والمسؤوليات لكل منصب وظيفي، وعلاقات العمل الداخلية والخارجية لكل منصب وظيفي في المنظمة للمساهمة في التوثيق السليم للوصف الوظيفي.<br>
-           6- تحديث الهيكل الوظيفي: يتم إعداد الهيكل الوظيفي ليكون قابل للتطوير بإضافات جديدة أو إجراء تعديلات وذلك لما يستجد من حاجة إلى التطوير خلال دورة حياة المنشآت بحيث يكون هناك مرونة للاستجابة لأي تغييرات أو تعديلات، قد يكون هذا التطوير جزئياً في الهيكل الوظيفي أو يتطلب إعادة تقسيم وتغيير جذري فإنه من المتوقع أن يكون هناك حاجة للتحديث.<br>
-           7- دليل المهام والمسؤوليات للشركة: كتيب يتم اعداده لكل وظيفة على الهيكل التنظيمي، بحيث يصف المهام التي يتم أدائها في الوظيفة بشكل جيد وكذلك يتضمن قائمة بالمسؤوليات الأساسية للوظيفة<br>
-           8- هندسة العمليات: منهجية إدارية تقوم على إعادة البناء التنظيمي جذرياً، وتعتمد على إعادة هيكلة العمليات الإدارية، بهدف تحقيق تطوير جوهري وطموح في أداء المنظمات، يكفل: سرعة الأداء، تخفيض التكلفة، تحسين جودة الخدمة      </p>
+اعدادات السياسات والاجراءات الداخلية</h3>
+          <p>
+            تحديد السلوكيات المتوقعة والإجراءات المحددة التي يجب اتباعها لضمان التنظيم والامتثال للقوانين وتحسين الكفاءة
+          </p>
         </header>
+
+        <div class="text-center"><button type="submit" style=" background: #F4D96E;
+          border: 5px;
+          padding: 10px 30px;
+          color: #fff;
+          transition: 0.4s;
+          cursor: pointer;"><a href="order.html" style="color: #fff;">لطلب الخدمة </a></button>
+        </div> 
 
       </div>
     </section><!-- End Services Section -->
