--- a/Services5.html
+++ b/Services5.html
@@ -58,7 +58,7 @@
                     <li><a>التطوير الاداري</a></li>
                     <li><a>أعادة الهيكلة</a></li>
                     <li><a>تصميم اجراءات العمل وأدارة معايير القياس والاداة</a></li>
-                    <li><a>الاستشارات التسويقية</a></li>
+                    <li><a>التخطيط الاستراتيجي</a></li>
                   </ul>
                   
                   </li>
@@ -108,10 +108,10 @@
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h2>الاستشارات التسويقية</h2>
+        <h2>التخطيط الاستراتيجي</h2>
         <ol>
           <li><a href="index.html">الرئيسية</a></li>
-          <li>الاستشارات التسويقية</li>
+          <li>التخطيط الاستراتيجي</li>
 
         </ol>
       </div>
@@ -125,64 +125,25 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header wow fadeInUp">
-          <h3>الاستشارات التسويقية</h3>
-          <p> هي فرع من فروع الاستشارات الإدارية التي تركز على عملية الاستخدام الفعال للموظفين للوصول إلى أهداف المنظمة</p>
-
-          <p style="text-align: start;">
-            1- دليل السياسات و الإجراءات : هي بيانات رسمية لقواعد توضح السياسات والإجراءات إلى أسلوب محدد في اتخاذ القرارات في المنظمة والقيام بالأعمال التفصيلية التي تسير على طرق ثابتة وتحدد من القائم بالعملية وأين ومتى ولماذا.<br>
-            2- دليل الوصف الوظيفي:وثيقة موضحة بمخطط تفصيلي يوضح كل الوظائف والمهام والمسؤوليات ودراسة متطلبات أداء الوظيفة في المنظمة.<br>
-            3- تصنيف وتقييم الوظائف:عملية تصنيف وتقييم الأهمية النسبية لكل موظف لمختلف الوظائف داخل المنظمة.<br>
-            4- خطة المسارات الوظيفية:تحديد الوظائف والمستويات الوظيفية وتخطيط المسار الوظيفي على أهداف قصيرة أو طويلة المدى تؤدي إلى عمل مهني مثالي.<br>
-            5- قائمة الجدارات الوظيفية:مجموعة من القدرات والمهارات تساهم في الأداء الفعال في الوظيفة، وتنميتها عن طريق الخبرة وسياق الفرد في التأقلم والتعلم.<br>
-            6- تحديد الاحتياجات التدريبية:تحديد الفجوة في الفرد وتحديد بعض التغيرات المطلوبة التي تساهم في التركيز على حسن الأداء والوصول إلى الأهداف المنتظرة.<br>
-            7- التدريب على رأس العمل :التدريب على المهارات داخل بيئة العمل لنقل المعارف والمهارات تقدم بواسطة مدربين مؤهلين وممارستها أثناء سير العمل وهذا يساهم في اَليات إنتاج متوافقة داخل المنظمة.<br>
-            8- تصميم وتطوير الهيكل التنظيمي للمنظمات و الإدارات:إطـار  يوضـح التقسـيمات الإدارية التـي تتكـون منهـا الجهـة مرتبـة علـى شـكل مســتويات ، وســلطة ومســؤولية كل تقســيم، وهــو الإطار الــذي تنســاب مــن خلاله الأوامر والتعليمــات مــن المســتوى الأعلى إلــى الأدنى، وتتوضــح فيــه صلاحية اتخــاذ القــرارات ومراكــز الســلطة والمســؤولية ويجب أن يتم إعداده ليكون قابل للتطوير بإضافات جديدة أو إجراء تعديلات وذلك لما يستجد من حاجة إلى التطوير خلال دورة حياة المنظمات.
+          <h3>التخطيط الاستراتيجي</h3>
+          <p> 
+            تشمل تحليل البيئة الخارجية والداخلية لتحديد الاتجاهات المستقبلية ووضع الاستراتيجيات لتحقيق النجاح 
           </p>
+      </header>
+      <div class="text-center"><button type="submit" style=" background: #F4D96E;
+        border: 5px;
+        padding: 10px 30px;
+        color: #fff;
+        transition: 0.4s;
+        cursor: pointer;"><a href="order.html" style="color: #fff;">لطلب الخدمة </a></button>
+      </div>
+
       </div>
     </section><!-- End Services Section -->
 
 
   </main><!-- End #main -->
-  <!-- ======= Contact Section ======= -->
-  <section id="contact" class="section-bg">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-header">
-        <h3>لطلب الخدمة</h3>
-     
-      </div>
-
-
-      <div class="form">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-          <div class="row">
-            <div class="form-group col-md-6">
-              <input type="text" name="name" class="form-control" id="name" placeholder="الاسم" required>
-            </div>
-            <div class="form-group col-md-6">
-              <input type="email" class="form-control" name="email" id="email" placeholder="البريد الالكتروني" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="phone" class="form-control" name="phone" id="phone" placeholder="رقم الهاتف" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="الموضوع" required>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" placeholder="الرسالة" required></textarea>
-          </div>
-          <div class="my-3">
-            <div class="loading">تحميل</div>
-            <div class="error-message"></div>
-            <div class="sent-message">تم ارسال رسالتك</div>
-          </div>
-          <div class="text-center"><button type="submit">ارسل</button></div>
-        </form>
-      </div>
-
-    </div>
-  </section><!-- End Contact Section -->
+  
 
 </main><!-- End #main -->
 
