--- a/Services6.html
+++ b/Services6.html
@@ -109,10 +109,10 @@
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h2>استشارات مالية ومحاسبية</h2>
+        <h2>التطوير الإداري</h2>
         <ol>
           <li><a href="index.html">الرئيسية</a></li>
-          <li>استشارات مالية ومحاسبية </li>
+          <li>التطوير الإداري </li>
 
         </ol>
       </div>
@@ -126,60 +126,17 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header wow fadeInUp">
-          <h3>استشارات مالية ومحاسبية</h3>
-          <p> يعتبر الإعداد للمشاريع الاقتصادية من أهم الخطوات لنجاح هذه المشاريع، حيث أن التخطيط السليم للمشاريع يضمن مدى نجاح وفاعلية هذه المشاريع، بالإضافة إلى العائد المادي الجيد المتوقع من هذه المشاريع. لذا وقبل البدء بأي مشروع اقتصادي يجب عمل دراسة جدوى اقتصادية له.</p>
-
-          <p style="text-align: start;">
-            1- الهندسة القيمية:هي دراسة تحليله للمشروع تعتمد على تحسين الأداء والجودة وتحقق الأهداف بأقل تكاليف من دون تأثير بالوظائف الأساسية والجودة .<br>
-            2- مراجعة وتحسين العمليات الحسابية .<br>
-            3- دراسة جدوى: إن دراسة الجدوى تلعب دوراً رئيسياً لصاحب المشروع في تحقيق الأهداف التي يسعى إليها من خلال الدراسة التسويقية والفنية والمالية والتي تحدد مدى الكفاءة الإدارية والمالية للبدء والانطلاق في المشروع وتأسيس البنية الأساسية بطرق علمية ومنهجية واضحة.<br>
-            4- أنظمة تخصيص التكاليف ورصد الخسائر : تحليل الأعباء لهدف التقييم، ولتحقيق أهداف محددة ويركز على تخفيض التكاليف وتحقيق الزيادة الربحية.
+          <h3>التطوير الإداري</h3>
+          <p> 
+            تساعد على تحسين وتعزيز مهارات وأداء المدراء والموظفين وتشمل هذه الخدمة التدريب وورش العمل لتعزيز الكفاءات الإدارية وزيادة فعالية الفريق 
           </p>
+
       </div>
     </section><!-- End Services Section -->
 
 
   </main><!-- End #main -->
-  <!-- ======= Contact Section ======= -->
-  <section id="contact" class="section-bg">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-header">
-        <h3>لطلب الخدمة</h3>
-     
-      </div>
-
-
-      <div class="form">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-          <div class="row">
-            <div class="form-group col-md-6">
-              <input type="text" name="name" class="form-control" id="name" placeholder="الاسم" required>
-            </div>
-            <div class="form-group col-md-6">
-              <input type="email" class="form-control" name="email" id="email" placeholder="البريد الالكتروني" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="phone" class="form-control" name="phone" id="phone" placeholder="رقم الهاتف" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="الموضوع" required>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" placeholder="الرسالة" required></textarea>
-          </div>
-          <div class="my-3">
-            <div class="loading">تحميل</div>
-            <div class="error-message"></div>
-            <div class="sent-message">تم ارسال رسالتك</div>
-          </div>
-          <div class="text-center"><button type="submit">ارسل</button></div>
-        </form>
-      </div>
-
-    </div>
-  </section><!-- End Contact Section -->
+ 
 
 </main><!-- End #main -->
 
