--- a/Services7.html
+++ b/Services7.html
@@ -109,10 +109,10 @@
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h2>تصميم إجراءات العمل وإدارة معايير القياس والأداء</h2>
+        <h2>إعادة الهيكلة</h2>
         <ol>
           <li><a href="index.html">الرئيسية</a></li>
-          <li>تصميم إجراءات العمل وإدارة معايير القياس والأداء</li>
+          <li>إعادة الهيكلة</li>
 
         </ol>
       </div>
@@ -126,54 +126,17 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header wow fadeInUp">
-          <h3>تصميم إجراءات العمل وإدارة معايير القياس والأداء</h3>
-          <p>تصميم مجموعة من العمليات الضرورية المنظمة والقياسية يتم العمل عليها في المنظمات وإدارة قياس مدى تحقق النتائج والأهداف من خلال كفاءة العاملين باستعمال معايير محددة يقارن بها أداءهم الفعلي.</p>
+          <h3>إعادة الهيكلة</h3>
+          <p>
+            تساعد على تحسين الكفاءة والاستجابة للتحديات الحالية بإعادة توزيع المسؤوليات وتحديث العمليات وتقليل التكاليف مما يؤدي إلى زيادة الإنتاجية 
+          </p>
 
       </div>
     </section><!-- End Services Section -->
 
 
   </main><!-- End #main -->
-  <!-- ======= Contact Section ======= -->
-  <section id="contact" class="section-bg">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-header">
-        <h3>لطلب الخدمة</h3>
-     
-      </div>
-
-
-      <div class="form">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-          <div class="row">
-            <div class="form-group col-md-6">
-              <input type="text" name="name" class="form-control" id="name" placeholder="الاسم" required>
-            </div>
-            <div class="form-group col-md-6">
-              <input type="email" class="form-control" name="email" id="email" placeholder="البريد الالكتروني" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="phone" class="form-control" name="phone" id="phone" placeholder="رقم الهاتف" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="الموضوع" required>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" placeholder="الرسالة" required></textarea>
-          </div>
-          <div class="my-3">
-            <div class="loading">تحميل</div>
-            <div class="error-message"></div>
-            <div class="sent-message">تم ارسال رسالتك</div>
-          </div>
-          <div class="text-center"><button type="submit">ارسل</button></div>
-        </form>
-      </div>
-
-    </div>
-  </section><!-- End Contact Section -->
+  
 
 </main><!-- End #main -->
 
