--- a/index.html
+++ b/index.html
@@ -104,48 +104,10 @@
     <div class="hero-container">
       <div id="heroCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
-        <ol id="hero-carousel-indicators" class="carousel-indicators"></ol>
-
+        
         <div class="carousel-inner" role="listbox">
-
-          <div class="carousel-item active" style="background-image: url(assets/img/portfolio/businessmen-analyzing-bar-charts-their-workplace.png)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">نرسم مسار النجاح ونبني جسرًا إلى المستقبل</h2>
-               </div>
-            </div>
-          </div>
-
-          <div class="carousel-item" style="background-image: url(assets/img/portfolio/executives-reviewing-last-report1.png)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">شركة الثقة والامانة للاستشارات الإدارية </h2>
-                <p class="animate__animated animate__fadeInUp">خدمات استشارية لقطاع الاعمال في كافة
-                  المجالات الإدارية والفنية والمالية والتنفيذية
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="carousel-item" style="background-image: url(assets/img/portfolio/hands-close-up-executives-showing-project.png)">
-            <div class="carousel-container">
-              <div class="container">
-                <h2 class="animate__animated animate__fadeInDown">شركة الثقة والامانة للاستشارات الإدارية </h2>
-                <p class="animate__animated animate__fadeInUp">استشارات خلاقة ورؤى إبداعية تتواكب مع طموح وطننا نحو قيادة العالم</p>
-              </div>
-            </div>
-          </div>
-
-          
+          <video class="elementor-background-video-hosted elementor-html5-video" autoplay muted playsinline loop><source src="assets/img/copy_5A4F370D-C1A5-4605-B9B6-B71FC756F427.mov"></source></video>
         </div>
-
-        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
-        </a>
-
-        <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-        </a>
 
       </div>
     </div>
@@ -176,39 +138,39 @@
 
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-buildings"></i></div>
-            <h4 class="title"><a href="">حوكمة الشركات</a></h4>
+            <h4 class="title"><a href="Services.html">حوكمة الشركات</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart-fill"></i></div>
-            <h4 class="title"><a href=""> وضع مؤشرات تقيم الاداء</a></h4>
+            <h4 class="title"><a href="Services1.html"> وضع مؤشرات تقيم الاداء</a></h4>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-diagram-3-fill"></i></div>
-            <h4 class="title"><a href="">الهيكل التنظيمي</a></h4>
+            <h4 class="title"><a href="Services3.html">الهيكل التنظيمي</a></h4>
            </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">اعدادات السياسات  والاجراءات الداخلية</a></h4>
+            <h4 class="title"><a href="Services2.html">اعدادات السياسات  والاجراءات الداخلية</a></h4>
             <p class="description"> </p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-briefcase-fill"></i></div>
-            <h4 class="title"><a href="">استشارات الاعمال</a></h4>
+            <h4 class="title"><a href="Services4.html">استشارات الاعمال</a></h4>
             <p class="description"> </p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-graph-up-arrow"></i></div>
-            <h4 class="title"><a href="">التخطيط الاستراتيجي</a></h4>
+            <h4 class="title"><a href="Services5.html">التخطيط الاستراتيجي</a></h4>
             <p class="description"> </p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-person-fill-gear"></i></div>
-            <h4 class="title"><a href="">التطوير الاداري</a></h4>
+            <h4 class="title"><a href="Services6.html">التطوير الاداري</a></h4>
             <p class="description"> </p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="bi bi-repeat"></i></div>
-            <h4 class="title"><a href="">اعادة الهيكلة</a></h4>
+            <h4 class="title"><a href="Services7.html">اعادة الهيكلة</a></h4>
             <p class="description"> </p>
           </div>
           <div class="col-lg-4 col-md-6 box" data-aos="fade-up" data-aos-delay="400">
@@ -374,7 +336,7 @@
           <div class="col-lg-4 col-md-6 footer-contact">
             <h4>تواصل معنا</h4>
             <p>
-              62431 Salahuddin Rd , Khamis Mushait<br>
+              <strong>الموقع:</strong>62431 Salahuddin Rd , Khamis Mushait<br>
               <strong>الهاتف :</strong> 966597570797+<br>
               <strong>البريد الالكتروني :</strong> info@th-consulting-group.com<br>
             </p>
