--- a/Services.html
+++ b/Services.html
@@ -109,10 +109,10 @@
     <div class="container">
 
       <div class="d-flex justify-content-between align-items-center">
-        <h2>تأسيس وإدارة المشاريع</h2>
+        <h2>حوكمة الشركات</h2>
         <ol>
           <li><a href="index.html">الرئيسية</a></li>
-          <li>تأسيس وإدارة المشاريع</li>
+          <li>حوكمة الشركات</li>
         </ol>
       </div>
 
@@ -125,55 +125,22 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header wow fadeInUp">
-          <h3>تأسيس وإدارة المشاريع</h3>
-          <p>خطوات علمية و عملية لتأسيس و إدارة المشاريع لتنظيم و إدارة الموارد المتاحة في المشاريع ، مثل : الموارد البشرية أو الموارد المادية ، بطريقة يمكن من خلالها إنجاز المشروع و كيفية إدارته وصولاً به إلى مرحلة النمو والنجاح وتحقيق الأرباح .</p>
+          <h3>حوكمة الشركات</h3>
+          <p>تحديد الأدوار والمسؤوليات داخل الشركة وضمان الامتثال للقوانين واللوائح وحماية حقوق المساهمين</p>
         </header>
-
+     
+        <div class="text-center"><button type="submit" style=" background: #F4D96E;
+          border: 5px;
+          padding: 10px 30px;
+          color: #fff;
+          transition: 0.4s;
+          cursor: pointer;"><a href="order.html" style="color: #fff;">لطلب الخدمة </a></button></div>
       </div>
     </section><!-- End Services Section -->
 
 
   </main><!-- End #main -->
-  <!-- ======= Contact Section ======= -->
-  <section id="contact" class="section-bg">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-header">
-        <h3>لطلب الخدمة</h3>
-     
-      </div>
-
-
-      <div class="form">
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-          <div class="row">
-            <div class="form-group col-md-6">
-              <input type="text" name="name" class="form-control" id="name" placeholder="الاسم" required>
-            </div>
-            <div class="form-group col-md-6">
-              <input type="email" class="form-control" name="email" id="email" placeholder="البريد الالكتروني" required>
-            </div>
-          </div>
-          <div class="form-group">
-            <input type="phone" class="form-control" name="phone" id="phone" placeholder="رقم الهاتف" required>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="subject" id="subject" placeholder="الموضوع" required>
-          </div>
-          <div class="form-group">
-            <textarea class="form-control" name="message" rows="5" placeholder="الرسالة" required></textarea>
-          </div>
-          <div class="my-3">
-            <div class="loading">تحميل</div>
-            <div class="error-message"></div>
-            <div class="sent-message">تم ارسال رسالتك</div>
-          </div>
-          <div class="text-center"><button type="submit">ارسل</button></div>
-        </form>
-      </div>
-
-    </div>
-  </section><!-- End Contact Section -->
+  
 
 </main><!-- End #main -->
 
