--- a/order.html
+++ b/order.html
@@ -46,49 +46,7 @@
             <ul>
               <li><a class="nav-link scrollto" href="index.html">الرئيسية</a></li>
               <li><a class="nav-link scrollto" href="about.html">من نحن</a></li>
-              <li class="dropdown"><a href="#services"><span>الخدمات</span> <i class="bi bi-chevron-down"></i></a>
-                <ul>
-                  <li class="dropdown"><a href=""> استشارات أدارية <i class="bi bi-chevron-left"></i></a>
-                  <ul>
-                    <li><a>	حوكمة الشركات</a></li>
-                    <li><a>وضع مؤشرات تقييم الأداء </a></li>
-                    <li><a>إعداد السياسات والإجراءات الداخلية</a></li>
-                    <li><a> الهيكل التنظيمي</a></li>
-                    <li><a>استشارات الاعمال واستشارات الموارد البشرية</a></li>
-                    <li><a>التخطيط الاستراتيجي</a></li>
-                    <li><a>التطوير الاداري</a></li>
-                    <li><a>أعادة الهيكلة</a></li>
-                    <li><a>تصميم اجراءات العمل وأدارة معايير القياس والاداة</a></li>
-                    <li><a>الاستشارات التسويقية</a></li>
-                  </ul>
-                  
-                  </li>
-                  <li class="dropdown"><a href=""> استشارات مالية  <i class="bi bi-chevron-left"></i></a>
-                    <ul>
-                      <li><a>	إعداد السياسات والإجراءات الداخلية للمنشأة</a></li>
-                      <li><a>	وضع الخطط المالية والموازنات التقديرية وفق التوجهات الاستراتيجية</a></li>
-                      <li><a>	إعداد متطلبات الجهات التمويلية</a></li>
-                      <li><a>	إعداد خطط العمل</a></li>
-                      <li><a>	إعداد التقارير المالية الدورية</a></li>
-                      <li><a>	تجهيز متطلبات المحاسب القانوني</a></li>
-                      <li><a>	تهيئة الأنظمة المحاسبية</a></li>
-                      <li><a>	مراجعة وتحسين العمليات الحسابية</a></li>
-                      <li><a>	إعداد دراسات الجدوى الاقتصادية والمالية</a></li>
-                      <li><a>	الرقابة المالية وتطوير الأنظمة المالية</a></li>
-                      <li><a>	تقييم واختيار نظام ERP اللازم للمنشأة بما يتناسب مع طبيعة وحجم نشاطها</a></li>
-                    </ul>
-                  </li>
-                  <li class="dropdown"><a href="">استشارات ضريبية <i class="bi bi-chevron-left"></i> </a>
-                    <ul>
-                      <li><a>ضريبة القيمة المضافة</a></li>
-                      <li><a>خدمات الاستشارات الضريبية</a></li>
-                      <li><a>خدمات كشف الزكاة/ ضريبة</a></li>
-                      <li><a>	تسعير التحويل</a></li>
-                    </ul>
-                 </li>
-                </ul>
-              </li>
-
+              <li class="nav-link scrollto"><a href="Services.html"><span>الخدمات</span></a>
 
               <li><a class="nav-link scrollto" href="order.html">طلب خدمة</a></li>
             </ul>
@@ -128,10 +86,11 @@
   <section id="services">
     <div class="container" data-aos="fade-up">
       <header class="section-header wow fadeInUp">
-        <h3>خطوات الطلب</h3>
+        <br><br>
+        <h3>رحلتك معنا</h3>
        </header>
       <img style="width: 100%;
-      padding-right:0;" src="assets/img/Always pay.png" >
+      padding-right:0;" src="assets/img/Always pay attention and listen to your teacher. (2).png" >
   </div>
   </section>
 
