--- a/about.html
+++ b/about.html
@@ -37,9 +37,8 @@
 
       <div class="row justify-content-center align-items-center">
         <div class="col-xl-11 d-flex align-items-center justify-content-between">
-          <h1 class="logo"></h1>
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+       
+          <a href="index.html" class="logo"><img src="assets/img/Logo PNG 1.png" alt="" class="img-fluid"></a>
 
           <nav id="navbar" class="navbar">
             <ul>
